--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>A&M Create</title>
+    <title>Mobile First</title>
   </head>
   <body>
     <noscript class="bg-gradient-to-r from-blue-500 to-teal-500">You need to enable JavaScript to run this app.</noscript>
